# lib/db/src/schema/playerProgress.ts
@@ -7,6 +7,7 @@ export const playerProgressTable = pgTable(
   {
     id: serial("id").primaryKey(),
     name: text("name").notNull(),
+    displayName: text("display_name"),
     passwordHash: text("password_hash"),
     score: integer("score").notNull().default(0),
     won: jsonb("won").$type<number[]>().notNull().default([]),
